CXO-1137 - partial unit test commit